# wsitools

./: .gitignore  Makefile  pyproject.toml  requirements.txt
docs/: conf.py  index.html  objects.inv  py-modindex.html  transforms.html
docsrc/: index.rst  transforms.rst
docsrc/_build/: genindex.html  searchindex.js  transforms.html
docsrc/_build/.doctrees/: environment.pickle  index.doctree  transforms.doctree
docsrc/_build/_sources/: index.rst.txt
docsrc/_build/doctrees/: environment.pickle  index.doctree  transforms.doctree
docsrc/_build/html/: .buildinfo  index.html  search.html
tests/: test_loading_wsi.py
wsitools/: transforms.py
