[tool.poetry]
name = "wsitools"
version = "0.1.0"
description = ""
authors = ["Santiago SILVA <16252054+sssilvar@users.noreply.github.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20"

histomicstk = { version = "^1.1.0", optional = true }

[tool.poetry.extras]
full = ['histomicstk']

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
